# nfa_minimization

./: .gitignore  AutomataReader.h  CMakeLists.txt  Group.h  MooreAutomata.h  README.md  Transition.h  main.cpp
